client/exclude_list_page/exclude_list.css
@font-face {
  font-family: "Open Sans";
  src: URL("/assets?name=fontOpenSans-Regular.ttf") format("truetype"),
    URL("/assets?name=fontOpenSans-Regular.woff") format("woff");
}

body {
  font-family: "Open Sans", sans-serif;
  background-color: #5891c4;
  margin: 0;
}

hr {
  width: 80%;
  border: 1px #f0b310 solid;
}

.main-container {
  display: block;
}

#datepicker-component {
  display: inline-block;
}

.main-container,
#datepicker-component {
  text-align: center;
}

#reset-button {
  float: left;
}

.getData {
  float: right;
}

.title,
.description {
  display: inline-block;
}

.title {
  font-size: 2vw;
  color: white;
  padding-right: 9vw;
}

.description {
  width: 20vw;
  height: 1vw;
  padding-left: 9vw;
  font-size: 0.85vw;
}

.button {
  padding: 1%;
  margin-bottom: 10px;
  border: 2px #f0b310 solid;
  border-radius: 5px;
  background: #f0b310;
}

.button:hover,
.button:focus {
  cursor: pointer;
}

.picture-row {
  opacity: 0;
  height: 0;
  display: flex;
  flex-wrap: wrap;
  background-color: #214566;
  padding: 0 4px;
}

.picture-column {
  flex: 25%;
  max-width: 25%;
  padding: 0 4px;
}

img {
  margin-top: 8px;
  vertical-align: middle;
  width: 100%;
  transition: width 2s;
  opacity: 1;
  transition: opacity 0.5s ease;
}

@media screen and (max-width: 800px) {
  .picture-column {
    flex: 50%;
    max-width: 50%;
  }
}

@media screen and (max-width: 600px) {
  .picture-column {
    flex: 100%;
    max-width: 100%;
  }
}

@media screen and (max-width: 1501px) {
  span {
    font-size: 3vw;
  }
  .title {
    font-size: 4vw;
  }
  .description {
    font-size: 2vw;
  }
}
@media screen and (max-width: 1000px) {
  span {
    font-size: 5vw;
  }
  .title {
    font-size: 6vw;
  }
  .description {
    font-size: 3vw;
  }
}

@media screen and (max-width: 1000px) {
  .title {
    display: flex;
    justify-content: center;
    padding-right: 0;
    padding-bottom: 1vw;
  }

  .description {
    padding-left: 0;
    justify-content: center;
    padding-top: 1vw;
    width: auto;
  }
}

.single-picture {
  position: relative;
}

.single-picture:hover .unselected {
  display: inline-block;
  opacity: 1;
}

.picture-unselected:hover img {
  opacity: 0.2;
}

.overlay {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  margin-top: 10px;
  margin-right: -20px;
}

.unselected {
  opacity: 0;
  transition: opacity 0.5s ease;
}

.selected {
  background-color: rgba(122, 252, 122, 0.281);
}

